<resources>
    <string name="app_name">Practical Parent</string>
    <string name="flip_button_text">FLIP</string>
    <string name="coin_pick_text_string">Pick a Child</string>
    <string name="win">WIN</string>
    <string name="lose">LOSE</string>
    <string name="head">HEAD</string>
    <string name="tail">TAIL</string>
    <string name="switch_child_text">Pick different child</string>
    <string name="switch_face_text">Pick a new face</string>
    <string name="face_pick_text">Pick Your Face</string>
    <string name="picked_tail_text">Picked Tail</string>
    <string name="picked_head_text">Picked Head</string>
    <string name="current_child_history">Current Child History</string>
    <string name="coin_flip_history">Coin Flip History</string>
    <string name="coin_flip">Coin Flip</string>
    <string name="name">Name</string>
    <string name="insert">insert</string>
    <string name="addition_info">Addition Info</string>


    <string name="homePageBackground">
        <a href="https://www.pinterest.ca/pin/565975878168745099/">
            <u>
                Home page background
            </u>
        </a>
    </string>
    <string name="timerBackground">
        <a href="https://www.pinterest.ca/pin/509117932857055374/">
            <u>
                Timer page background
            </u>
        </a>
    </string>
    <string name="linkToCourse">
        <a href="https://opencoursehub.cs.sfu.ca/bfraser/grav-cms/cmpt276/home">
            <u>
                Link to course webpage
            </u>
        </a>
    </string>
    <string name="task_name">Task Name</string>
    <string name="task_description">Task Description</string>
    <string name="no_child_for_task">No Child For Task</string>
    <string name="task_name_dialog">Task Name</string>
    <string name="task_description_dialog">Task Description</string>
    <string name="pick_a_time_in_minutes_or_set_your_own">Pick a time (in minutes) or set your own:</string>
    <string name="task_name_popup">Task Name</string>
    <string name="child_name_popup">Child Name</string>
    <string name="insert_btn_task">Insert</string>
    <string name="_1">1</string>
    <string name="set_btn_timer">Set</string>
    <string name="minutes_txt_timer">Minutes</string>
    <string name="reset_btn_timer">Reset</string>
    <string name="start_btn_timer">Start</string>
    <string name="_00_00">00:00</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="_10">10</string>

    <string name="takePhoto">Take Photo</string>
    <string name="selectImageFromGallery">Select Image From Gallery</string>
    <string name="coinflip">coinFlip</string>
    <string name="practical">PRACTICAL</string>
    <string name="configure_children">Configure Children</string>
    <string name="timer">Timer</string>
    <string name="tasks">Tasks</string>
    <string name="help">HELP</string>
    <string name="parent">PARENT</string>
    <string name="exclaim">!</string>
    <string name="exclaim_mark">!</string>
    <string name="this_project_is_created_by_team_brass">This Project is created by Team Brass</string>
    <string name="members">Members:</string>
    <string name="hang_wei_liu">Hang Wei Liu</string>
    <string name="sash_stolba">Sash Stolba</string>
    <string name="mariz_fahmy">Mariz Fahmy</string>
    <string name="andrew_liang">Andrew Liang</string>
    <string name="links_to_resource">Links to resource</string>

    <string name="n_breaths">Let\'s take %d breaths</string>
    <string name="begin_breath">Begin</string>
    <string name="n_breath_text">Select between 1 to 10 breaths</string>
    <string name="to_breath">Breath</string>
    <string name="button_breath_in">In</string>
    <string name="text_breath_in">Breath In and \n Press and hold the Button for at least 3s </string>
    <string name="button_breath_out">Out</string>
    <string name="text_breath_out">Time to Breath out, Remaining Time: %o</string>
    <string name="text_breath_out_ok">Time up! Press the Button for next Breath</string>
    <string name="remain_breath">Remain Breath: %d</string>
    <string name="good_job_button">Good Job</string>
    <string name="finish_text">No remaining Breath !!!</string>
    <string name="remain_time_text">Remaining Time: %o</string>
    <string name="to_release_text">Release button and breath out!</string>
    <string name="breath">Take a breath</string>
    <string name="timer_is_at_100">Timer is at 100%</string>
    <string name="history_of_all">History of All</string>

    <string-array name="timer_speed">
        <item>25%</item>
        <item>50%</item>
        <item>75%</item>
        <item>100%</item>
        <item>200%</item>
        <item>300%</item>
        <item>400%</item>
    </string-array>

</resources>